correcction bug z-index

--- a/styles/appear.css
+++ b/styles/appear.css
@@ -14,6 +14,7 @@
 
 .reveal-3{
     transition-delay: .2s;
+    z-index: 1;
 }
 .reveal-4{
     transition-delay: .3s;
