--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ main {
     bottom: 0;
     left: 50%;
     margin-left: -3px;
+    z-index: 0;
 }
 
 .timeline-item {
@@ -95,7 +96,7 @@ main {
     top: 15px;
     left: -17px; /* Adjusted to match the line */
     border-radius: 50%;
-    z-index: 1;
+    z-index: 3;
 }
 
 .timeline-item:nth-child(even)::before {
